--- a/OfficeRoomie/appsettings.json
+++ b/OfficeRoomie/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=officeroomie;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "SqlServerConnection": "server=localhost;database=officeroomie;trusted_connection=false;User Id=sa;Password=Senh@123;Persist Security Info=False;Encrypt=False"
+  },
   "AllowedHosts": "*"
 }
