--- a/OfficeRoomie/OfficeRoomie.csproj
+++ b/OfficeRoomie/OfficeRoomie.csproj
@@ -21,5 +21,6 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3"/>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8"/>
   </ItemGroup>
 </Project>
