--- a/OfficeRoomie/appsettings.json
+++ b/OfficeRoomie/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=officeroomie;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "SqlServerConnection": "server=localhost;database=officeroomie;trusted_connection=false;User Id=sa;Password=Senh@123;Persist Security Info=False;Encrypt=False"
+    "SqlServerConnection": "server=localhost;database=officeroomie;trusted_connection=false;User Id=sa;Password=Senh@123;Persist Security Info=False;Encrypt=False",
+    "SqLiteConnection": "Data Source=app.db;Cache=Shared"
   },
   "AllowedHosts": "*"
 }
